User Dashboard alignment issue fix

--- a/src/components/user/user.css
+++ b/src/components/user/user.css
@@ -198,6 +198,26 @@
   width: 160px !important;
 }
 
+.user-filter-select-cal .ant-calendar-picker-input{
+  height: 40px;
+  width: 100% !important;
+}
+.user-filter-select-cal
+{
+  width: 100%;
+}
+
+.user-filter-select-drop .ant-select-selection{
+  border: 1px solid var(--app-d9d9d9) !important;
+  width: 100% !important;
+  min-height: 40px !important;
+  box-shadow: 0px 8px 16px 0 rgba(27, 27, 52, 0.06);
+  background-color: var(--app-white);
+}
+.user-filter-select-drop{
+  width: 100% !important;
+
+}
 .user-filter-row .user-col{
   margin-bottom: 15px;
 }
@@ -224,6 +244,17 @@
 .user-filter-col-cont input{
     width: 300px !important;
     height: 40px !important;
+}
+.user-filter-col-postal 
+{
+width: 100%;
+display: flex;
+flex-direction: row;
+align-items: center;
+}
+.user-filter-col-postal input{
+  width: 100% !important;
+  height: 40px !important;
 }
 
 .affiliate-dir-srch{
